updated key binding for cycle bindings command from F6 to ctrl+g as F6 is used for debugging.
git-svn-id: svn://svn.code.sf.net/p/egap/code/trunk@16 93e531cb-8bc5-43e9-a6eb-085851364379

--- a/egap/plugin.xml
+++ b/egap/plugin.xml
@@ -91,7 +91,7 @@
           commandId="egap.cycleBindings"
           contextId="org.eclipse.ui.contexts.window"
           schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
-          sequence="F6">
+          sequence="M1+G">
     </key>
  </extension>
  
