removed dependency to google guava to make the lib smaller.
git-svn-id: svn://svn.code.sf.net/p/egap/code/trunk@62 93e531cb-8bc5-43e9-a6eb-085851364379

--- a/egap/build.properties
+++ b/egap/build.properties
@@ -4,9 +4,6 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               lib/,\
-               lib/guava-r06.jar,\
                license.txt
-src.includes = lib/,\
-               icons/,\
+src.includes = icons/,\
                license.txt
