--- a/egap/plugin.xml
+++ b/egap/plugin.xml
@@ -6,7 +6,7 @@
          point="org.eclipse.jdt.ui.quickFixProcessors">
 	
       <quickFixProcessor
-            class="egap.quickfix.EgapQuickFixProcessor"
+            class="de.jaculon.egap.quickfix.EgapQuickFixProcessor"
             id="egap.quickfix.EgapQuickFixProcessor"
             name="egap.quickfix.EgapQuickFixProcessor">
       </quickFixProcessor>
@@ -15,7 +15,7 @@
    <extension
          point="org.eclipse.ui.preferencePages">
       <page
-            class="egap.preferences.EgapPreferencePage"
+            class="de.jaculon.egap.preferences.EgapPreferencePage"
             id="egap.preferences.EgapPreferencePage"
             name="Egap">
       </page>
@@ -23,7 +23,7 @@
    <extension
          point="org.eclipse.core.runtime.preferences">
       <initializer
-            class="egap.preferences.PreferenceInitializer">
+            class="de.jaculon.egap.preferences.PreferenceInitializer">
       </initializer>
    </extension>
    
@@ -32,7 +32,7 @@
 			name="Egap Project Builder"
 			point="org.eclipse.core.resources.builders">
 		<builder hasNature="true">
-			<run class="egap.project_builder.EgapBuilder" />
+			<run class="de.jaculon.egap.project_builder.EgapBuilder" />
 		</builder>
 	</extension>
 	
@@ -41,7 +41,7 @@
 			name="Egap Project Nature"
 			point="org.eclipse.core.resources.natures">
 		<runtime>
-			<run class="egap.nature.EgapNature" />
+			<run class="de.jaculon.egap.nature.EgapNature" />
 		</runtime>
 		<builder id="egap.EgapBuilder" />
 	</extension>
@@ -53,7 +53,7 @@
 				nameFilter="*"
 				objectClass="org.eclipse.core.resources.IProject">
 			<action
-         class="egap.nature.EgapToggleNatureAction"
+         class="de.jaculon.egap.nature.EgapToggleNatureAction"
          enablesFor="+"
          icon="icons/egap_icon_big.png"
          id="egap.toggleNatureAction"
@@ -84,11 +84,11 @@
  <extension
        point="org.eclipse.ui.handlers">
     <handler
-          class="egap.command.CycleBindingsHandler"
+          class="de.jaculon.egap.command.CycleBindingsHandler"
           commandId="egap.cycleBindings">
     </handler>
     <handler
-          class="egap.command.CreateMockitoJUnitTestHandler"
+          class="de.jaculon.egap.command.CreateMockitoJUnitTestHandler"
           commandId="egap.createMockitoJunitTest">
     </handler>
  </extension>
