--- a/egap/plugin.xml
+++ b/egap/plugin.xml
@@ -32,7 +32,7 @@
 			name="Egap Project Builder"
 			point="org.eclipse.core.resources.builders">
 		<builder hasNature="true">
-			<run class="de.jaculon.egap.project_builder.EgapBuilder" />
+			<run class="de.jaculon.egap.project_builder.EgapProjectBuilder" />
 		</builder>
 	</extension>
 	
