--- a/egap/.settings/org.moreunit.prefs
+++ b/egap/.settings/org.moreunit.prefs
@@ -1,7 +1,6 @@
-#Sat Nov 10 18:20:05 CET 2012
+#Fri Nov 30 16:08:35 CET 2012
 eclipse.preferences.version=1
-org.moreunit.prefixes=
+org.moreunit.preferences.version=2
 org.moreunit.test_methodType=testMethodTypeNoPrefix
-org.moreunit.test_type=junit4
 org.moreunit.unitsourcefolder=egap\:src\:egap.tests\:src
 org.moreunit.useprojectsettings=true
