--- a/egap/.settings/org.moreunit.prefs
+++ b/egap/.settings/org.moreunit.prefs
@@ -1,6 +1,7 @@
-#Fri Nov 30 16:08:35 CET 2012
+#Tue Dec 18 08:09:09 CET 2012
 eclipse.preferences.version=1
 org.moreunit.preferences.version=2
+org.moreunit.testClassNameTemplate=${srcFile}*Test
 org.moreunit.test_methodType=testMethodTypeNoPrefix
 org.moreunit.unitsourcefolder=egap\:src\:egap.tests\:src
 org.moreunit.useprojectsettings=true
