--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .metadata
 .gradle
 bin/
+target/
 tmp/
 *.tmp
 *.bak
@@ -9,6 +10,8 @@ tmp/
 local.properties
 .settings/
 .loadpath
+.classpath
+.project
 
 # External tool builders
 .externalToolBuilders/
