--- a/egap/build.properties
+++ b/egap/build.properties
@@ -4,6 +4,7 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               license.txt
+               license.txt,\
+               lib/
 src.includes = icons/,\
                license.txt
