--- a/egap/pom.xml
+++ b/egap/pom.xml
@@ -20,7 +20,13 @@
 	</dependencies>
 
 	<build>
-		<sourceDirectory>src</sourceDirectory>
+		<sourceDirectory>${basedir}/src</sourceDirectory>
+		<resources>
+			<resource>
+				<directory>${basedir}/icons</directory>
+			</resource>
+		</resources>
+		<outputDirectory>${basedir}/icons</outputDirectory>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
