--- a/egap/build.properties
+++ b/egap/build.properties
@@ -4,7 +4,6 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               license.txt,\
-               lib/
+               license.txt,
 src.includes = icons/,\
                license.txt
