--- a/egap/build.properties
+++ b/egap/build.properties
@@ -4,6 +4,6 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               license.txt,
+               LICENSE
 src.includes = icons/,\
-               license.txt
+               LICENSE
